namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wellnesshub
  labels:
    app: wellnesshub
