adminms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminms
  namespace: wellnesshub
  labels:
    app: adminms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminms
  template:
    metadata:
      labels:
        app: adminms
    spec:
      containers:
        - name: adminms
          image: 192.168.49.1:5000/wellness-adminms:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8763
          readinessProbe:
            tcpSocket:
              port: 8763
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10
