entreprisex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entreprisex
  namespace: wellnesshub
  labels:
    app: entreprisex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entreprisex
  template:
    metadata:
      labels:
        app: entreprisex
    spec:
      containers:
        - name: entreprisex
          image: 192.168.49.1:5000/wellness-entreprisex:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8765
          readinessProbe:
            tcpSocket:
              port: 8765
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10
