entreprisey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entreprisey
  namespace: wellnesshub
  labels:
    app: entreprisey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entreprisey
  template:
    metadata:
      labels:
        app: entreprisey
    spec:
      containers:
        - name: entreprisey
          image: 192.168.49.1:5000/wellness-entreprisey:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8766
          readinessProbe:
            tcpSocket:
              port: 8766
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10
