eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: wellnesshub
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: 192.168.49.1:5000/wellness-eureka:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10
