expertms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expertms
  namespace: wellnesshub
  labels:
    app: expertms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expertms
  template:
    metadata:
      labels:
        app: expertms
    spec:
      containers:
        - name: expertms
          image: 192.168.49.1:5000/wellness-expertms:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8764
          readinessProbe:
            tcpSocket:
              port: 8764
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10
