gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: wellnesshub
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: 192.168.49.1:5000/wellness-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8762
          readinessProbe:
            tcpSocket:
              port: 8762
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10
