adminms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminms-service
  namespace: wellnesshub
spec:
  selector:
    app: adminms
  ports:
    - port: 8763
      targetPort: 8763
  type: ClusterIP
