entreprisex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entreprisex-service
  namespace: wellnesshub
spec:
  selector:
    app: entreprisex
  ports:
    - port: 8765
      targetPort: 8765
  type: ClusterIP
