entreprisey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entreprisey-service
  namespace: wellnesshub
spec:
  selector:
    app: entreprisey
  ports:
    - port: 8766
      targetPort: 8766
  type: ClusterIP
