eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: wellnesshub
spec:
  selector:
    app: eureka
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
