expertms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expertms-service
  namespace: wellnesshub
spec:
  selector:
    app: expertms
  ports:
    - port: 8764
      targetPort: 8764
  type: ClusterIP
