gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: wellnesshub
spec:
  selector:
    app: gateway
  ports:
    - port: 8762
      targetPort: 8762
      nodePort: 30762
  type: NodePort
