ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wellnesshub-ingress
  namespace: wellnesshub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: wellnesshub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8762
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8761
